# Implementation_of_Intelligent_Robotics

./: README.md
challenge/: inverted_pendulum_pid_controller.py
challenge/differential_drive_robot_pid_controller/: differential_robot_controller.py
computer_vision/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
computer_vision/install/my_robot_description/share/my_robot_description/: package.sh  package.xml
computer_vision/log/: latest_build
computer_vision/src/: imager_reader.py  robotic_arm_controller.py
computer_vision/src/my_robot_description/: package.xml  setup.py
computer_vision/src/my_robot_description/config/: controller.yaml
computer_vision/src/my_robot_description/launch/: robot_launch.py
computer_vision/src/my_robot_description/urdf/Panda/: robot.urdf
